--- a/index.html
+++ b/index.html
@@ -56,6 +56,42 @@
             font-size: 12px;
             font-weight: 400;
         }
+
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+         
+            
+        .content {
+            padding: 20px;
+        }
+
+        .product {
+            background-color: #fff;
+            margin: 30px;
+            padding: 20px;
+            border: 1px solid #dddddd;
+            width: 20%;
+            display: inline-block;
+            vertical-align: top;
+            text-align: center;
+        }
+
+        .category {
+        color: #666;
+        font-size: 15px;
+        margin-right: 45%;
+        margin-top: 0%;
+      }
+
+      .price {
+        color: #333;
+        font-weight: bold;
+        margin-right: 0%;
+      }
     </style>
 </head>
 <body>
@@ -85,5 +121,19 @@
             </div>
         </nav>
     </header>
+    <div class="content">
+        <div class="product">
+            <img src="https://imagescdn.reebok.in/img/app/product/3/39628881-13000211.jpg?q=75&auto=format&w=342" alt="Product 1">
+            <p class="category">TRAINING SHOES</p>
+            <h3 style="color: #252525;">Reebok Women NFX Trainer</h3>
+          <p class="price">₹7,599</p>           
+        </div>
+        <div class="product">
+            <img src="https://imagescdn.reebok.in/img/app/product/3/39628113-12976330.jpg?q=75&auto=format&w=342" alt="Product 2">
+            <p class="category">RUNNING SHOES</p>
+            <h3 style="color: #252525;">Reebok Women Rush Runner </h3>
+          <p class="price">₹2,599</p>   
+        </div>
+        </div>
 </body>
 </html>
